<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/pexels_drawer_movies"
            android:icon="@drawable/drawer_movies"
            android:title="@string/button_movies" />

        <item
            android:id="@+id/pexels_drawer_soccer"
            android:icon="@drawable/drawer_soccer"
            android:title="@string/button_soccer" />

        <item
            android:id="@+id/pexels_drawer_ticketmaster"
            android:icon="@drawable/drawer_ticketmaster"
            android:title="@string/button_tickets" />

        <item
            android:id="@+id/pexels_drawer_help"
            android:icon="@drawable/drawer_help"
            android:title="@string/pexels_menu_help_title" />
    </group>

</menu>