<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/purple_500">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu_pexels"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"/>

    <TextView
        android:id="@+id/pexels_drawer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pexels_drawer_title"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"/>

    <TextView
        android:id="@+id/pexels_drawer_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pexels_drawer_version"
        android:textColor="@color/white"
        android:paddingTop="4dp"
        android:paddingLeft="16dp"/>

    <TextView
        android:id="@+id/pexels_drawer_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pexels_drawer_author"
        android:textColor="@color/white"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"/>

    <TextView
        android:id="@+id/pexels_drawer_author_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pexels_drawer_author_email"
        android:textColor="@color/white"
        android:paddingTop="4dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"/>

</LinearLayout>
